# SO-Zad2

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  libtool
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
include/: objetosc.h  pole.h
src/: Code2.c  objetosc.c  pole.c
src/.deps/: Code2-Code2.Po  objetosc.Plo  pole.Po
