#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Code2], [3.0], [grzesio.szymanek@gmail.com])
LT_INIT
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC
AC_CHECK_HEADERS([stdio.h stdlib.h])
AC_CONFIG_FILES([Makefile])

# Checks for programs.


# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
